# polymarket-reader

./: main.py  polymarket.db  pyproject.toml
app/: client.py  config.py  main.py  models.py  scanner.py  storage.py
