[project]
name = "polymarket-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.17"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tenacity>=9.1.2",
]
